test/sema/c-enum.delta
// RUN: not %delta -typecheck -Iinputs %s | %FileCheck %s

import "c-enum.h";

func main() {
    let i: int = FOO;

    // TODO: Auto-convert the constant integer to uint here.
    // CHECK: [[@LINE+1]]:19: error: cannot initialize variable of type 'uint' with 'int'
    let u: uint = FOO;
}
